[gd_scene load_steps=16 format=3 uid="uid://bwwv3sibc50m4"]

[ext_resource type="Script" path="res://Resources/Enemies/enemy_class.gd" id="1_dvpn2"]
[ext_resource type="Texture2D" uid="uid://bby03wvnyaw12" path="res://Resources/Art/Enemies/trogg_enemy.png" id="2_k24bp"]
[ext_resource type="PackedScene" uid="uid://bytg7c32ifr14" path="res://Scenes/UI/Enemy/enemy_buffs.tscn" id="3_x28el"]
[ext_resource type="PackedScene" uid="uid://dkkuwrl21x050" path="res://Scenes/UI/Enemy/enemy_debuffs.tscn" id="4_bjjea"]
[ext_resource type="PackedScene" uid="uid://bpd2de3rcq1y4" path="res://Scenes/Enemies/enemy_deck_node.tscn" id="5_87uqv"]
[ext_resource type="PackedScene" uid="uid://4upwwtb4irk8" path="res://Scenes/Enemies/enemy_skills_node.tscn" id="5_orf8w"]
[ext_resource type="Script" path="res://Scripts/Enemies/Trogg/Runes.gd" id="7_qdf2y"]
[ext_resource type="Texture2D" uid="uid://dt0ya4xvwf842" path="res://Resources/UI/health_bar_under.png" id="8_u54sm"]
[ext_resource type="Texture2D" uid="uid://bg17x4moack4" path="res://Resources/UI/health_bar_border.png" id="9_xotyc"]
[ext_resource type="Texture2D" uid="uid://cxmblkhdw7e8x" path="res://Resources/UI/health_bar.png" id="10_s27e1"]
[ext_resource type="PackedScene" uid="uid://do64c04vimntg" path="res://Scenes/UI/Tooltips/tooltip_panel.tscn" id="11_4cvw8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8yrtx"]
size = Vector2(142.5, 174)

[sub_resource type="Gradient" id="Gradient_r0sdc"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yiy73"]
gradient = SubResource("Gradient_r0sdc")
width = 1300
height = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j1tnv"]
bg_color = Color(0.6, 0.6, 0.6, 0.615686)

[node name="BaseEnemy" type="Node2D"]
script = ExtResource("1_dvpn2")

[node name="EnemyImage" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_k24bp")

[node name="EnemyBorder" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="EnemyBuffs" parent="." instance=ExtResource("3_x28el")]
unique_name_in_owner = true

[node name="EnemyDebuffs" parent="." instance=ExtResource("4_bjjea")]
unique_name_in_owner = true

[node name="Skills" parent="." instance=ExtResource("5_orf8w")]
unique_name_in_owner = true

[node name="Deck" parent="." instance=ExtResource("5_87uqv")]
unique_name_in_owner = true

[node name="Runes" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("7_qdf2y")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.25, -1)
shape = SubResource("RectangleShape2D_8yrtx")

[node name="EnemyUI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = -73.0
offset_top = -85.0
offset_right = 73.0
offset_bottom = 89.0

[node name="EnemyHealthBar" type="TextureProgressBar" parent="EnemyUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -583.0
offset_top = -212.0
offset_right = 580.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
texture_under = ExtResource("8_u54sm")
texture_over = ExtResource("9_xotyc")
texture_progress = ExtResource("10_s27e1")

[node name="EnemyHealthLabel" type="Label" parent="EnemyUI/EnemyHealthBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 578.0
offset_top = 4.0
offset_right = 722.0
offset_bottom = 22.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "3000/3000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldAndXPBox" type="VBoxContainer" parent="EnemyUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 149.0
offset_top = 6.0
offset_right = 236.0
offset_bottom = 46.0

[node name="EnemyGold" type="Label" parent="EnemyUI/GoldAndXPBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "2g"

[node name="EnemyXP" type="Label" parent="EnemyUI/GoldAndXPBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "2xp"

[node name="EnemySelectionHealth" type="Label" parent="EnemyUI"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = -21.0
offset_right = 122.0
offset_bottom = -5.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "110/120"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyHealthBar2" type="TextureProgressBar" parent="EnemyUI/EnemySelectionHealth"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.0
offset_top = 3.0
offset_right = 1228.0
offset_bottom = 27.0
grow_horizontal = 2
scale = Vector2(0.112245, 0.46176)
value = 100.0
texture_under = SubResource("GradientTexture2D_yiy73")
texture_progress = ExtResource("10_s27e1")

[node name="StatContainer" type="VBoxContainer" parent="EnemyUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 156.0
offset_top = 66.0
offset_right = 252.0
offset_bottom = 164.0

[node name="AttackLabel" type="Label" parent="EnemyUI/StatContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Atk: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackPanel" type="Panel" parent="EnemyUI/StatContainer/AttackLabel"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DefenseLabel" type="Label" parent="EnemyUI/StatContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Atk: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DefensePanel" type="Panel" parent="EnemyUI/StatContainer/DefenseLabel"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ArmorLabel" type="Label" parent="EnemyUI/StatContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Def: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ArmorPanel" type="Panel" parent="EnemyUI/StatContainer/ArmorLabel"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StunIndicator" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -73.0
offset_top = -90.0
offset_right = 72.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxFlat_j1tnv")

[node name="StunLabel" type="Label" parent="StunIndicator"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 65.0
offset_top = 83.0
offset_right = 81.0
offset_bottom = 99.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "1
"

[node name="TooltipPanel" parent="." instance=ExtResource("11_4cvw8")]
unique_name_in_owner = true

[connection signal="mouse_entered" from="EnemyUI" to="." method="_on_enemy_ui_mouse_entered"]
[connection signal="mouse_exited" from="EnemyUI" to="." method="_on_enemy_ui_mouse_exited"]
